gcc/testsuite/g++.dg/rtti/typeid6.C
@@ -1,0 +1,11 @@
+// PR c++/33463
+
+namespace std
+{
+  class type_info {};
+}
+
+template<int> void foo()
+{
+  !typeid(void); // { dg-error "!typeid\\(void\\)|candidates" }
+}
